fixes z-index

--- a/src/components/AdvancedFacetViewModal/style.css
+++ b/src/components/AdvancedFacetViewModal/style.css
@@ -7,3 +7,6 @@
 .advancedFacetViewWrapper .facetViewNode .aggregation-card .bucket .bucket-item {
   box-sizing: border-box;
 }
+.dropDownHeader {
+  z-index: 100;
+}
